--- a/index.qmd
+++ b/index.qmd
@@ -528,7 +528,7 @@ The Minnesota prior used as prior of the model, the parameters are follows:
 ```{=tex}
 \begin{align}
 \underline{A} &= [0_{N \times 1} \quad I_N \quad 0_{N \times (p-1)N}]' \\ 
-Var[vec(A)] &= \Sigma \otimes  \underline{V} \\
+\Var[vec(A)] &= \Sigma \otimes  \underline{V} \\
 \underline{V} &= \text{diag}([\kappa_2 \quad \kappa_1 (p^{-2} \otimes \imath_N)]) \\
 \end{align}
 ```
